cmake_minimum_required(VERSION 3.9)
project(cmake_clion)

set(CMAKE_CXX_STANDARD 20)

add_executable(datatype_sizes datatype_sizes.c)
add_executable(pointer pointer.c)
add_executable(addrof2 addrof2.c)
add_executable(input input.c)
add_executable(typecasting typecasting.c)
add_executable(pointer_types pointer_types.c)
add_executable(pointer_types2 pointer_types2.c)
add_executable(pointer_types3 pointer_types3.c)
add_executable(cmdline cmdline.c)
add_executable(pointer_types5 pointer_types5.c)
add_executable(scope scope.c)
add_executable(scope2 scope2.c)
add_executable(stack_example stack_example.c)
add_executable(memory_segments memory_segments.c)
add_executable(heap_example heap_example.c)
add_executable(errorchecked_heap errorchecked_heap.c)
add_executable(simplenote simplenote.c)
add_executable(bitwise bitwise.c)
add_executable(time_example time_example.c)
add_executable(time_example2 time_example2.c)
add_executable(overflow_example overflow_example.c)